feat: 更新gms sdk 1.1.0

--- a/gms_android/build.gradle
+++ b/gms_android/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'com.android.library'
 }
-
+afterEvaluate {
+    generateReleaseBuildConfig.enabled = false
+}
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
