--- a/gms_android/build.gradle
+++ b/gms_android/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     }
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.okio:okio:1.13.0'
 }
