--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation project(':gms_android')
-
+//    implementation 'com.github.rzrtcbuilder:gms-android-sdk:1.5.1'
 
 
 }
