--- a/gms_android/build.gradle
+++ b/gms_android/build.gradle
@@ -1,9 +1,7 @@
 plugins {
     id 'com.android.library'
 }
-afterEvaluate {
-    generateReleaseBuildConfig.enabled = false
-}
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -44,3 +42,32 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.okio:okio:1.13.0'
 }
+
+def group_jar = 'com.github.rzrtcbuilder'
+//def version_jar =  '1.5.3' //release仓库 使用
+def version_jar = '1.5.3' //推送开发库使用
+def artifactId_jar = 'gms-android-sdk'
+
+apply plugin: 'maven'
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: 'https://packages.aliyun.com/maven/repository/2165194-release-fjDUQT/') {
+                authentication(
+                        userName: '61b6beeed6190210d87450f0',
+                        password: 'blwnkGQJz-JL'
+                )
+            }
+            snapshotRepository(url: 'https://packages.aliyun.com/maven/repository/2165194-snapshot-vBNXKq/') {
+                authentication(
+                        userName: '61b6beeed6190210d87450f0',
+                        password: 'blwnkGQJz-JL'
+                )
+            }
+            pom.version = "${version_jar}"
+            pom.artifactId = "${artifactId_jar}"
+            pom.groupId = "${group_jar}"
+        }
+    }
+}
+
