--- a/gms_android/src/main/AndroidManifest.xml
+++ b/gms_android/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rzrtc.gms_ndroid">
+    package="cn.tosee.gms_ndroid">
 
 </manifest>
